--- a/asgn2/Makefile
+++ b/asgn2/Makefile
@@ -3,7 +3,7 @@ MODULE_NAME = asgn2
 
 
 obj-m   := $(MODULE_NAME).o
-
+asgn2-objs := asgn_2.o gpio.o
 
 KDIR    := /lib/modules/$(shell uname -r)/build
 PWD     := $(shell pwd)
@@ -13,7 +13,10 @@ PWD     := $(shell pwd)
 all: module
 
 module:
-	$(MAKE) -C $(KDIR) M=$(PWD) modules
+	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) M=$(PWD)  modules
+
+#gpio:
+#	gcc -g -W -Wall gpio.c -o gpio
 
 clean:
 	$(MAKE) -C $(KDIR) M=$(PWD) clean
